--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="main">
      <div class="container">
           <div class="nav">
-              <div class="logo"><h1>LOGO</h1></div>
+              <div class="logo"><h1>Carolina Salads</h1></div>
               <div class="list-item">
                   <ul>
                       <li><a href="#">About Us</a></li>
@@ -43,7 +43,7 @@
                     <div class="content-box-1">
                         <div class="box-1">
                          <img src="./img/1613802792166.png" width="160px">
-                         <h4>Mix Salad1</h4>
+                         <h4>Mix Salad</h4>
                          <p>Mis Vegetable</p>
                             <div class="price">
                              <h6>$24.00</h6>
@@ -52,7 +52,7 @@
                         </div>
                         <div class="box-2">
                             <img src="./img/1613802792166.png" width="160px">
-                            <h4>Mix Salad2</h4>
+                            <h4>Mix Salad</h4>
                             <p>Mis Vegetable</p>
                                <div class="price">
                                 <h6>$24.00</h6>
@@ -62,18 +62,18 @@
                         <div class="content-box-2">
                           <div class="box-3">
                             <img src="./img/1613802792166.png" width="160px">
-                            <h4>Mix Salad3</h4>
-                            <p>Mis Vegetable</p>
+                            <h4>Salad Cusine</h4>
+                            <p>Vegetable</p>
                                <div class="price">
-                                <h6>$24.00</h6>
+                                <h6>$9.99</h6>
                                </div>
                          </div>
                             <div class="box-4">
                             <img src="./img/1613802792166.png" width="160px">
-                            <h4>Mix Salad4</h4>
+                            <h4>Salad Caroline </h4>
                             <p>Mis Vegetable</p>
                                <div class="price">
-                                <h6>$24.00</h6>
+                                <h6>$14.00</h6>
                                </div>
                           </div>
                         </div>
